<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ms_color_FFFFFF"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/ms_color_F5F6F7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/name"
            style="@style/MS.Title"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/debug_category_mode" />


        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <RadioButton
                android:id="@+id/rb_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/ms_kit_mode_rb_normal"
                android:textColor="@color/ms_color_324456" />

            <RadioButton
                android:id="@+id/rb_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/ms_kit_mode_rb_system"
                android:textColor="@color/ms_color_324456" />

        </RadioGroup>

        <TextView
            android:id="@+id/desc"
            style="@style/MS.TextSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:text="@string/ms_kit_mode_desc" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/ms_color_F5F6F7" />
</LinearLayout>
